--- a/apps/external/src/index.html
+++ b/apps/external/src/index.html
@@ -21,7 +21,7 @@
   <div style="margin:50px">
     <div class="col-sm-3">
       
-      <external-dashboard-tile></external-dashboard-tile>
+      <external-dashboard-tile [data]="{a: 1, b: 2, c: 3}"></external-dashboard-tile>
       
     </div>
   </div>
